frontend/test/should_fail/delretypesame_001b_e.grg
rule r{	-e:Edge->;		alternative {		case {						modify {				-f:Edge<e>->;			}		}	}		modify {		delete(e);	}}